@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.54 2010/01/28 21:37:35 minskim Exp $
+# $NetBSD: Makefile,v 1.55 2010/01/29 21:46:19 minskim Exp $
 
 DISTNAME=	tetex-src-3.0
 PKGNAME=	${DISTNAME:C/tetex/teTeX/:C/src/bin/}
-PKGREVISION=	40
+PKGREVISION=	41
 CATEGORIES=	print
 MASTER_SITES=	${MASTER_SITE_TEX_CTAN:=systems/unix/teTeX/3.0/distrib/}
 
@@ -14,9 +14,9 @@ PKG_DESTDIR_SUPPORT=	user-destdir
 
 DEPENDS+=	makeindexk-[0-9]*:../../textproc/makeindexk
 DEPENDS+=	teTeX-texmf>=3.0nb14:../../print/teTeX3-texmf
-DEPENDS+=	tex-bin-kpathsea-[0-9]*:../../print/tex-bin-kpathsea
 DEPENDS+=	tex-bin-latex-[0-9]*:../../print/tex-bin-latex
 DEPENDS+=	tex-bin-metafont-[0-9]*:../../fonts/tex-bin-metafont
+DEPENDS+=	tex-kpathsea-[0-9]*:../../print/tex-kpathsea
 DEPENDS+=	tex-pdftex-[0-9]*:../../print/tex-pdftex
 DEPENDS+=	tex-tex-[0-9]*:../../print/tex-tex
 DEPENDS+=	web2c>=7.5.7nb2:../../print/web2c
